# docs/swagger.yaml
@@ -171,6 +171,49 @@ paths:
       summary: Attendance
       tags:
       - Attendance
+  /v1/attendances:
+    get:
+      consumes:
+      - application/json
+      description: for Get Attendances
+      parameters:
+      - description: page requested (defaults to 0)
+        in: query
+        name: page
+        type: integer
+      - description: number of records in a page  (defaults to 10)
+        in: query
+        name: pagesize
+        type: integer
+      - description: 'sort order by column. ex: check_in asc. field name with space
+          then asc/desc'
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/entity.BaseResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            items:
+              $ref: '#/definitions/entity.BaseResponse'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            items:
+              $ref: '#/definitions/entity.BaseResponse'
+            type: array
+      summary: Attendance
+      tags:
+      - Attendance
   /v1/employee/{emp_no}:
     get:
       consumes:
